# lucid-model

./: .gitignore  README.md  agents.md  orchestrator.py  pyproject.toml  requirements.txt
audit/perception/: perception-20260528T084855Z-0037333ca7c3.json
constitution/: agents.md  note.md
constitution/implementation/: context_operator.md  cue_encoder.md  decoder.md  projector.md
constitution/notes/: accomplished.md  cost-quantized-continual-training.md  decoderplan.md  hypothesis-memory-basins.md  local-binding-universal-operators.md  revamp.md  system.md
constitution/test/: learning.md
lucid/: __init__.py  chat.py  cli.py  paths.py
lucid/audit/: __init__.py  ask_report.py  basins.py  binding.py  chat.py  cue.py  decoder.py  direct_run.py  dmf.py  inspect.py  layout.py  logger.py  lucidity.py  sanitize.py  scaling.py  smoke.py  stage_summary.py
lucid/cognition/: __init__.py  projector.py  session_continuity.py
lucid/ir/: __init__.py  basins.py  binding.py  common.py  context_op.py  cue.py  dmf.py  expression.py  interference.py  lucidity.py  (+6 more)
superintelligence/: To build out.md  Zyphra AI papers.md  build.md  gen.md
tests/: test_audit_logger.py  test_audit_sanitize.py  test_basins.py  test_binding.py  test_context_op.py  test_dmf_runtime.py  test_golden_fixtures.py  test_interference.py  test_ir_roundtrip.py  test_lucidity.py  test_orchestrator_e2e.py  test_orchestrator_runner.py  test_perception.py  test_projector.py  test_scaling.py  test_training_quantization.py
train/: README.txt
web/: .gitignore  package-lock.json  package.json  tsconfig.json
(+325 files in other folders)
