[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lucid-model"
version = "0.1.0"
description = "Lucid cognitive pipeline — IR and contracts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
lucid-inspect = "lucid.audit.inspect:main"
lucid-gen = "lucid.training.generator.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["lucid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
